compiler/fir/analysis-tests/testData/resolve/KT-65022.kt
val d by <!DELEGATE_SPECIAL_FUNCTION_MISSING, UNSUPPORTED!>[]<!>
